@@ -104,6 +104,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - GML                    José Jorge Enríquez Rodríguez
 - GNU make               Neil Bird
 - Gnuplot                Milian Wolff
+- Go                     Markus Jarderot
 - Groovy                 Ivan F. Villanueva B.
 - GwBasic                José Gabriel Moya Yangüela
 - Haskell                Dagit
