@@ -16,6 +16,7 @@ Version 1.0.8.9
   -  Added language files
      * Algol68 (Neville Dempsey)
      * FormulaOne (Juro Bystricky)
+     * Go (Markus Jarderot)
      * Liberty BASIC (Chris Iverson)
      * MOS 6502/6510 Assemblers (Warren Willmey)
      * Motorola 68k assembler (Warren Willmey)
